# tuna-installer

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  README.md  meson.build  meson_options.txt  recipe.json
.github/workflows/: bootcrew-fast.yml  bootcrew-nightly.yml  flatpak.yml  go-test.yml  python-test.yml
bootc_installer/: bootc-installer-processor.in  bootc-installer.gresource.xml  bootc-installer.in  main.py  meson.build  tuna-installer-processor.in
bootc_installer/core/: meson.build  system.py
bootc_installer/core/locales/: africa.py  america.py  antarctica.py  arctic.py  asia.py  atlantic.py  australia.py  brazil.py  canada.py  chile.py  europe.py  indian.py  mexico.py  pacific.py
bootc_installer/defaults/: conn_check.py  disk.py  encryption.py  image.py  keyboard.py  language.py  meson.build  network.py  nvidia.py  theme.py  timezone.py  user.py  vm.py  welcome.py
bootc_installer/gtk/: default-disk.blp  default-image.blp  default-language.blp  default-users.blp  dialog-disk-confirm.blp  dialog-disk.blp  dialog-output.blp  dialog-poweroff.blp  layout-yes-no.blp  tour.blp  widget-choice-expander.blp  widget-choice.blp  widget-disk.blp  widget-keyboard.blp  widget-language.blp  widget-partition-row.blp  widget-partition.blp  window-cpu.blp  window.blp
bootc_installer/layouts/: meson.build  preferences.py  yes_no.py
bootc_installer/utils/: builder.py  meson.build  processor.py  progress_parser.py  recipe.py
bootc_installer/views/: confirm.py  done.py  meson.build  progress.py  tour.py
bootc_installer/widgets/: meson.build  page_header.py
bootc_installer/windows/: dialog.py  dialog_output.py  dialog_poweroff.py  dialog_recovery.py  main_window.py  meson.build  window_cpu.py  window_ram.py  window_unsupported.py
data/: images.json  meson.build  org.bootcinstaller.Installer.appdata.xml.in  org.bootcinstaller.Installer.desktop.in  org.bootcinstaller.Installer.gschema.xml  org.bootcinstaller.Installer.policy  org.tunaos.Installer.appdata.xml.in  org.tunaos.Installer.desktop.in  org.tunaos.Installer.gschema.xml
data/icons/: meson.build
data/polkit/: org.bootcinstaller.Installer.policy  org.tunaos.Installer.policy
docs/superpowers/plans/: 2026-03-29-composefs-fisherman.md  2026-03-30-boot-verification.md  2026-03-30-proportional-progress-tracking.md
docs/superpowers/specs/: 2026-03-29-composefs-fisherman-design.md  2026-03-30-boot-verification-design.md  2026-03-30-proportional-progress-tracking-design.md
flatpak/: org.bootcinstaller.Installer.json  org.gnome.mutter.gschema.xml  org.tunaos.Installer.json
repo/: summary  summary.idx
repo/refs/heads/app/org.tunaos.Installer/x86_64/: master
repo/refs/heads/appstream/: x86_64
repo/refs/heads/appstream2/: x86_64
repo/refs/heads/runtime/org.tunaos.Installer.Debug/x86_64/: master
repo/refs/heads/runtime/org.tunaos.Installer.Locale/x86_64/: master
repo/summaries/: 2f65893e4251653729f138281d6d372a3dbd25570369052369e98cdf50227019-6b137a371f00d53427589c71a15ff3a25b03d9cc9313c14748f780bd479b15fe.delta  6b2ee41bd4cf588d974e9388e0cb507bca2d313c400fae6a07727507a7f11cf8-6b137a371f00d53427589c71a15ff3a25b03d9cc9313c14748f780bd479b15fe.delta  6c8e55bd9ae64f7b6b384fc0b48dcdba248180cefa916b7188ecc9b3e8574533-6b137a371f00d53427589c71a15ff3a25b03d9cc9313c14748f780bd479b15fe.delta  6eb5beca6fb3e9a1434aea8a3bd6fad42273dbac25bbdb4936e0ed4f3b53b2fa-6b137a371f00d53427589c71a15ff3a25b03d9cc9313c14748f780bd479b15fe.delta  a3813357384c8958abb45d886d8f8daabf9e22ffa9c9999e1e403b6a5b71d86c-6b137a371f00d53427589c71a15ff3a25b03d9cc9313c14748f780bd479b15fe.delta  ce179849f801118b7230d65ba556699b8d1e64d4f2a1cfb2374937000ccf2441-6b137a371f00d53427589c71a15ff3a25b03d9cc9313c14748f780bd479b15fe.delta  e79711a57ee35f8d170cefdb5ed6168e969465c8b93b22a63f7556eb1a524d7d-6b137a371f00d53427589c71a15ff3a25b03d9cc9313c14748f780bd479b15fe.delta  ecf605b7233ad1ff63e7af86a2ea84e23782a06d94594a1670aed00846d5c6ca-6b137a371f00d53427589c71a15ff3a25b03d9cc9313c14748f780bd479b15fe.delta
tests/: bootcrew-matrix.yaml  test_e2e_install.sh
tests/fake-bins/: ostree  podman
tests/ui/: conftest.py  test_wizard.py
tests/unit/: test_done.py  test_main_window.py  test_meson_sources.py  test_processor.py  test_progress.py  test_progress_parser.py
tuna_installer/: main.py  meson.build  tuna-installer.gresource.xml  tuna-installer.in
tuna_installer/core/: disks.py  meson.build
tuna_installer/core/locales/: africa.py  america.py  antarctica.py  arctic.py  asia.py  atlantic.py  australia.py  brazil.py  canada.py  chile.py  europe.py  indian.py  mexico.py  pacific.py
tuna_installer/defaults/: conn_check.py  disk.py  encryption.py  image.py  keyboard.py  language.py  meson.build  network.py  nvidia.py  theme.py  timezone.py  user.py  vm.py  welcome.py
tuna_installer/gtk/: confirm.blp  confirm.ui  default-conn-check.blp  default-disk.blp  default-disk.ui  default-encryption.blp  default-encryption.ui  default-image.blp  default-image.ui  default-keyboard.blp  default-language.blp  default-network.blp  default-nvidia.blp  default-theme.blp  default-timezone.blp  default-users.blp  default-vm.blp  default-welcome.blp  dialog-output.blp  dialog-recovery.blp  dialog.blp  done.blp  done.ui  layout-preferences.blp  layout-yes-no.blp  progress.blp  progress.ui  tour.blp  widget-page-header.blp  widget-timezone.blp  window-ram.blp  window-unsupported.blp  window.blp  window.ui  wireless-row.blp
tuna_installer/layouts/: meson.build  preferences.py  yes_no.py
tuna_installer/utils/: builder.py  meson.build  processor.py  recipe.py
tuna_installer/views/: confirm.py  done.py  meson.build  progress.py  tour.py
tuna_installer/widgets/: meson.build  page_header.py
tuna_installer/windows/: dialog.py  dialog_output.py  dialog_poweroff.py  dialog_recovery.py  main_window.py  meson.build  window_cpu.py  window_ram.py  window_unsupported.py
